# Gitlab-CI-CD

./: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md
src/: Matrix.cpp  Matrix.h  main.cpp  math_utils.cpp  math_utils.h
tests/: test_math_utils.cpp  test_matrix.cpp
